--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -100,7 +100,7 @@ body {
     max-width: 600px;
     margin: 50px auto;
     padding: 20px;
-    background-color: rgba(255, 255, 255, 0.8);
+    background-color: rgba(89, 154, 252, 0.9);
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
@@ -154,8 +154,8 @@ body {
     max-width: 600px;
     margin: 20px auto;
     padding: 15px;
-    background-color: rgba(255, 255, 255, 0.9);
-    border: 2px solid #FF5733;
+    background-color: rgba(89, 154, 252, 0.9);
+    border: 2px solid #000000;
     border-radius: 10px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
     text-align: center;
@@ -166,3 +166,5 @@ body {
     color: #333;
     font-weight: bold;
 }
+
+
