Agrego de contacto y nosotros

--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -166,5 +166,155 @@ body {
     color: #333;
     font-weight: bold;
 }
+.nosotros-container {
+    max-width: 1200px;
+    margin: 0 auto;
+    padding: 20px;
+}
 
+.nosotros-section {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 20px;
+    margin: 30px 0;
+}
+
+.nosotros-section:nth-child(even) {
+    flex-direction: row-reverse;
+}
+
+.nosotros-box {
+    flex: 1;
+    padding: 20px;
+    background-color: rgba(89, 154, 252, 0.9);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    text-align: left;
+}
+
+
+.nosotros-title {
+    font-size: 2.5rem;
+    color: #ffffff;
+    margin-bottom: 20px;
+}
+
+.nosotros-box p {
+    font-size: 1.2rem;
+    line-height: 1.8;
+    color: #000000;
+}
+
+.nosotros-image {
+    flex: 1;
+    text-align: center;
+}
+
+.nosotros-image img {
+    max-width: 100%;
+    height: auto;
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+.menu {
+    display: flex;
+    justify-content: center;
+    background-color: rgba(29, 148, 184, 0.8);
+    padding: 10px 0;
+    position: fixed;
+    width: 100%;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+}
+
+.menu-link {
+    color: #fff;
+    text-decoration: none;
+    margin: 0 15px;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 15px;
+    transition: background-color 0.3s, color 0.3s;
+}
+
+.menu-link:hover {
+    background-color: #020087;
+    color: #fff;
+    border-radius: 5px;
+}
+
+.menu-link.active {
+    background-color: #020087;
+    color: #fff;
+    border-radius: 5px;
+}
+
+body {
+    margin-top: 60px;
+}
+
+
+
+
+
+.titulo-contacto {
+    font-size: 2.5rem;
+    color: #007BFF;
+    text-align: center;
+    margin-top: 20px;
+    text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
+}
+
+.form-container {
+    max-width: 600px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: rgba(29, 148, 184, 0.8);
+    border-radius: 10px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+}
+
+
+form label {
+    display: block;
+    font-size: 1rem;
+    font-weight: bold;
+    margin-bottom: 10px;
+    color: #333;
+}
+
+
+form input,
+form select,
+form textarea {
+    width: 100%;
+    padding: 10px;
+    margin-bottom: 20px;
+    border: 1px solid #ccc;
+    border-radius: 5px;
+    font-size: 1rem;
+    box-sizing: border-box;
+}
+
+
+.btn-submit {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #ffffff;
+    color: #000000;
+    border: none;
+    border-radius: 5px;
+    font-size: 1rem;
+    font-weight: bold;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+}
+
+.btn-submit:hover {
+    background-color: #020087;
+}
 
