--- a/Estilos/estilos.css
+++ b/Estilos/estilos.css
@@ -256,10 +256,6 @@ body {
     margin-top: 60px;
 }
 
-
-
-
-
 .titulo-contacto {
     font-size: 2.5rem;
     color: #007BFF;
@@ -317,4 +313,55 @@ form textarea {
 .btn-submit:hover {
     background-color: #020087;
 }
+
+.ayuda, .donaciones {
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+    padding: 20px;
+    margin: 100px;
+}
+
+.ayuda h2, .donaciones h2 {
+    color: #4CAF50;
+}
+
+.ayuda ul, .donaciones ul {
+    list-style: none;
+    padding: 0;
+}
+
+.ayuda ul li, .donaciones ul li {
+    margin-bottom: 10px;
+}
+
+.ayuda a, .donaciones a {
+    color: #4CAF50;
+    text-decoration: none;
+}
+
+.ayuda a:hover, .donaciones a:hover {
+    text-decoration: underline;
+}
+
+.btn-donacion {
+    background: #4CAF50;
+    color: #fff !important;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 16px;
+    border-radius: 5px;
+    transition: background 0.3s;
+}
+
+.btn-donacion:hover {
+    background: #0a9611;
+}
+
+.btn-donacion:focus, .btn-donacion:active {
+    background: #4CAF50;
+    color: #fff !important;
+}
+
 
